--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collain GINET</title>
     <link rel="stylesheet" href="assets\style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-custom navbar-transparent p-4">
@@ -17,22 +17,24 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link mx-4" href="#">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link mx-4" href="#">À propos</a></li>
-                    <li class="nav-item"><a class="nav-link mx-4" href="#">Formation</a></li>
-                    <li class="nav-item"><a class="nav-link mx-4" href="#">Compétences</a></li>
-                    <li class="nav-item"><a class="nav-link mx-4" href="#">Projets</a></li>
-                    <li class="nav-item"><a class="nav-link mx-4" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link mx-4" href="#home">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link mx-4" href="#about">À propos</a></li>
+                    <li class="nav-item"><a class="nav-link mx-4" href="#formation">Formation</a></li>
+                    <li class="nav-item"><a class="nav-link mx-4" href="#skills">Compétences</a></li>
+                    <li class="nav-item"><a class="nav-link mx-4" href="#projects">Projets</a></li>
+                    <li class="nav-item"><a class="nav-link mx-4" href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>      
+        <section id="home">
         <div class="container-fluid p-0">
             <img src="assets\images\la-difference-entre-un-developpeur-web-integrateur-et-un-webdesigner-ifocop.jpg" class="custom-image" alt="Photo de la ville de Lyon">
             <div class="text-center">
                 <p class="typing-effect" id="typing"></p>
             </div>
         </div>
+        </section>
         <section id="about">
         <div class="container-fluid p-0 d-flex justify-content-between presentation-padding">
             <div class="card mb-3 custom-card-image">
@@ -43,7 +45,7 @@
                 </div>
             </div>
             <div class="card mb-3 custom-card-text">
-                <div class="card-body p-3">
+                <div class="card-body p-3 shadow-lg">
                     <h5 class="card-title m-0 mx-5">Présentation</h5>
                     <p class="card-text my-5 mx-5">
                         Après avoir obtenu un diplôme en langues, j'ai choisi de me tourner vers une autre de mes grandes passions : l'informatique. Cette décision m'a conduit à intégrer un BTS Services Informatiques aux Organisations (SIO), où je suis actuellement en deuxième année.
@@ -60,7 +62,47 @@
             </div>
         </div>    
       </section>
-      <section class="competences-section">
+      <section id="formation">
+        <div class="container my-5 d-flex flex-column gap-5">
+            <h2 class="center-title mb-4">Formations</h2>
+            <div class="formation-bg p-4 shadow-lg">
+                <h4>BTS SIO</h4>
+                <div class="d-flex justify-content-between"><h5>Solutions Logicielles et Applications Métiers (SLAM)</h5>
+                    <p class="fw-bold">2023-2025</p>
+                </div>
+                <p class="fst-italic"><br>Campus Science-U Lyon</p>
+            </div>
+            <div class="formation-bg p-4 shadow-lg">
+                <h4>Technicien systèmes et réseaux (stage)</h4>
+                <div class="d-flex justify-content-between"><h5>Electric Terminal</h5>
+                    <p class="fw-bold">Juin - Juillet 2024</p>
+                </div>
+                <p class="fst-italic"><br>Sainte-Foy-lès-Lyon</p>
+            </div>
+            <div class="formation-bg p-4 shadow-lg">
+                <h4>Master 1 Langue et Gestion LEA</h4>
+                <div class="d-flex justify-content-between"><h5>Anglais - Japonais</h5>
+                    <p class="fw-bold">2020 - 2021</p>
+                </div>
+                <p class="fst-italic"><br>Université Lyon 3</p>
+            </div>
+            <div class="formation-bg p-4 shadow-lg">
+                <h4>Licence LEA</h4>
+                <div class="d-flex justify-content-between"><h5>Anglais - Japonais (Mention Assez Bien)</h5>
+                    <p class="fw-bold">2016 - 2019</p>
+                </div>
+                <p class="fst-italic"><br>Université Lyon 3</p>
+            </div>
+            <div class="formation-bg p-4 shadow-lg">
+                <h4>Baccalauréat</h4>
+                <div class="d-flex justify-content-between"><h5>Général Economique et Social (Mention Assez Bien)</h5>
+                    <p class="fw-bold">2016</p>
+                </div>
+                <p class="fst-italic"><br>Lycée de la Côtière</p>
+            </div>
+        </div>
+      </section>
+      <section id="skills" class="competences-section">
         <div class="container my-5">
             <h2 class="center-title mb-4">Compétences</h2>
             <div class="image-row row justify-content-center gap-4">
@@ -115,7 +157,7 @@
             </div>
         </div>
     </section>
-    <section class="projets-section">
+    <section id="projects" class="projets-section">
         <h2 class="project-title">Mes projets</h2>
         <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -170,32 +212,53 @@
             </button>
         </div>
     </section>
+    <h2 class="project-title">Mes articles</h2>
+<div class="d-flex justify-content-center gap-5">
+    <div class="card shadow-lg" style="width: 18rem;">
+        <img class="image_veille card-img-top" src="assets\images\rustacean-flat-happy.webp" alt="Ferris, mascotte de Rust">
+        <div class="card-body">
+          <h5 class="card-title">Rust et ses utilisations par les grandes entreprises</h5>
+          <p class="card-text">Pourquoi les géants de la tech choisissent-ils Rust pour leurs projets ? Un tour d'horizon des usages innovants de ce langage.</p>
+          <a href="veilleRust.html" class="btn btn-primary">Voir l'article</a>
+        </div>
+    </div>
+    <div class="card shadow-lg" style="width: 18rem;">
+        <img class="image_veille card-img-top" src="assets\images\cloud-computing.webp" alt="Nuages représentant  le cloud computing">
+        <div class="card-body">
+          <h5 class="card-title">Le cloud computing et les préoccupations environnementales</h5>
+          <p class="card-text">Comment le cloud computing répond-il aux défis environnementaux ? Un aperçu des initiatives et innovations visant à rendre le cloud plus durable.</p>
+          <a href="#" class="btn btn-primary">Voir l'article</a>
+        </div>
+    </div>
+</div>
+
     <section id="contact" class="my-5">
         <div class="container">
             <h2 class="center-title mb-4">Contact</h2>
-            <form class="form-margin-mx d-flex flex-column justify-content-center">
+            <form class="form-margin-mx d-flex flex-column justify-content-center" id="contactForm" action="formMail.php" method="post">
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <label for="firstName" class="form-label">Prénom</label>
-                        <input type="text" class="form-control" id="firstName" placeholder="Votre prénom" required>
+                        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Votre prénom" required>
                     </div>
                     <div class="col-md-6">
                         <label for="lastName" class="form-label">Nom</label>
-                        <input type="text" class="form-control" id="lastName" placeholder="Votre nom" required>
+                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Votre nom" required>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Adresse email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Votre email" required>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Votre email" required>
                 </div>
                 <div class="mb-3">
                     <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" id="message" rows="10" placeholder="Votre message" required></textarea>
+                    <textarea class="form-control" id="message" rows="10" name="message"placeholder="Votre message" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary mx-auto button-form-p">Envoyer</button>
             </form>
         </div>
     </section> 
+    </div>
     <footer class="footer-bg">
         <img src="assets/images/featured-developpeur-web-1170x511.webp" alt="Background" class="footer-image">
         <div class="overlay"></div>
@@ -205,17 +268,29 @@
                     <div class="info-box">
                         <i class="fas fa-phone fa-2x"></i>
                         <h5>Téléphone</h5>
-                        <p>+20 (432) 3476 3479</p>
+                        <p>06 95 51 24 37</p>
                     </div>
                     <div class="info-box">
                         <i class="fas fa-map-marker-alt fa-2x"></i>
                         <h5>Adresse</h5>
-                        <p>75 New York - Bourbon Street 10/555</p>
+                        <p>436 Rue de Genève, Dagneux</p>
+                    </div>
+                    <div class="info-box">
+                        <h5>Réseaux</h5>
+                        <div class="reseaux_logo">
+                        <a href="https://www.linkedin.com/in/collain-ginet-5b18b8276/" target="_blank">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
+                        <a href="https://github.com/Adler07" target="_blank">
+                           <i class="bi bi-github"></i>
+                        </a>
+                    </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
       <script>
         // Fonction pour gérer le défilement et modifier la classe
         window.onscroll = function() {
@@ -231,36 +306,6 @@
                 navbar.classList.add('navbar-transparent');
             }
         };
-
-        const textArray = ["Bienvenue sur mon site", "Je suis un développeur informatique", "Je suis quelqu'un de créatif"];
-        let typingElement = document.getElementById("typing");
-        let index = 0;
-        let charIndex = 0;
-        let isDeleting = false;
-        let typingSpeed = 100;
-        let deletingSpeed = 50;
-        let pauseBetweenWords = 1500;
-        function typeEffect() {
-            if (charIndex < textArray[index].length && !isDeleting) {
-                typingElement.textContent += textArray[index].charAt(charIndex);
-                charIndex++;
-                setTimeout(typeEffect, typingSpeed);
-            } else if (isDeleting && charIndex > 0) {
-                typingElement.textContent = textArray[index].substring(0, charIndex - 1);
-                charIndex--;
-                setTimeout(typeEffect, deletingSpeed);
-            } else if (!isDeleting && charIndex === textArray[index].length) {
-                setTimeout(() => {
-                    isDeleting = true;
-                    typeEffect();
-                }, pauseBetweenWords);
-            } else if (isDeleting && charIndex === 0) {
-                isDeleting = false;
-                index = (index + 1) % textArray.length;
-                setTimeout(typeEffect, typingSpeed);
-            }
-        }
-        typeEffect();
       </script>
 </body>
 </html>
