--- a/index.html
+++ b/index.html
@@ -159,59 +159,41 @@
     </section>
     <section id="projects" class="projets-section">
         <h2 class="project-title">Mes projets</h2>
-        <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img src="assets\images\Logo noir et bleu.png" class="d-block w-100" alt="Projet 1">
-                        </div>
-                        <div class="col-md-6 d-flex align-items-center">
-                            <p class="project-description">Electric-Terminal :<br><br> une entreprise de bornes électriques ou j'ai passé 5 semaines en tant que stagiaire technicien systèmes et réseaux. J'ai pu notamment configurer un serveur à plusieurs reprises pour que les développeurs puissent s'en servir comme d'une borne test et installer un gestionnaire de mot de passe sur le réseau de l'entreprise.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img src="assets\images\restaurant_gastronomique2_short.jpg" class="d-block w-100" alt="Projet 2">
-                        </div>
-                        <div class="col-md-6 d-flex align-items-center">
-                            <p class="project-description">Restaurant Opale : Un site web pour un restaurant gastronomique. Le but était de créer un système de réservation pour que les clients .</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img src="assets\images\360_F_470537712_dohR5YBCof8rMT7rtmoUAMaaElH0Dzlz.png" class="d-block w-100" alt="Projet 3">
-                        </div>
-                        <div class="col-md-6 d-flex align-items-center">
-                            <p class="project-description"> GSB mobile : <br><br> La version mobile de l'application d'entreprise pour faciliter la gestion et le rembousrement de frais de ses employés. Réalisé en utilisant Java et Firebase. </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img src="assets\images\360_F_513487343_IMur4Mskl0MhdsxLBjUf3RO1tJ1X6pn6.webp" class="d-block w-100" alt="Projet 4">
-                        </div>
-                        <div class="col-md-6 d-flex align-items-center">
-                            <p class="project-description">GSB :<br><br> Création d'une application d'entreprise pour faciliter la gestion et le remboursement de frais de ses employés. Réalisé en utilisant HTML, Bootstrap, Javascript, Php et MySQL.</p>
-                        </div>
-                    </div>
+        <div class="d-flex justify-content-center flex-wrap gap-4">
+            <div class="card shadow-lg" style="width: 18rem;">
+                <img class="image_veille card-img-top" src="assets\images\GSBlogo_Plan de travail 1.jpg" alt="Logo de GSB">
+                <div class="card-body">
+                    <h5 class="card-title">GSB - Application web</h5>
+                    <p class="card-text">Création d'une application web pour le suivi et la gestion des remboursement de frais de déplacement</p>
+                    <a href="veilleRust.html" class="btn btn-primary">Voir le projet</a>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#projectCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#projectCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class="card shadow-lg" style="width: 18rem;">
+                <img class="image_veille card-img-top" src="assets\images\Logo noir et bleu.png" alt="Logo d'Electric Terminal">
+                <div class="card-body">
+                    <h5 class="card-title">Stage en tant que technicien systèmes et réseaux</h5>
+                    <p class="card-text">Détails sur ma période de stage chez Electric Terminal en tant que technicien systèmes et réseaux</p>
+                    <a href="#" class="btn btn-primary">Voir le projet</a>
+                </div>
+            </div>
+            <div class="card shadow-lg" style="width: 18rem;">
+                <img class="image_veille card-img-top" src="assets\images\GSBlogo_Plan de travail 1.jpg" alt="Logo de GSB">
+                <div class="card-body">
+                    <h5 class="card-title">GSB - Application mobile</h5>
+                    <p class="card-text">Création d'une application mobile pour le suivi et la gestion des remboursement de frais de déplacement</p>
+                    <a href="veilleRust.html" class="btn btn-primary">Voir le projet</a>
+                </div>
+            </div>
+            <div class="card shadow-lg" style="width: 18rem;">
+                <img class="image_veille card-img-top" src="assets\images\restaurant_gastronomique2_short.jpg" alt="image d'intérieur du restaurant Opale">
+                <div class="card-body">
+                    <h5 class="card-title">Restaurant Opale - site web</h5>
+                    <p class="card-text">Création d'un site web avec système de réservation et crud pour changer les menus</p>
+                    <a href="#" class="btn btn-primary">Voir le projet</a>
+                </div>
+            </div>
         </div>
-    </section>
+    </section>    
     <h2 class="project-title">Mes articles</h2>
 <div class="d-flex justify-content-center gap-5">
     <div class="card shadow-lg" style="width: 18rem;">
@@ -227,11 +209,10 @@
         <div class="card-body">
           <h5 class="card-title">Le cloud computing et les préoccupations environnementales</h5>
           <p class="card-text">Comment le cloud computing répond-il aux défis environnementaux ? Un aperçu des initiatives et innovations visant à rendre le cloud plus durable.</p>
-          <a href="#" class="btn btn-primary">Voir l'article</a>
+          <a href="veilleRust.html" class="btn btn-primary">Voir l'article</a>
         </div>
     </div>
 </div>
-
     <section id="contact" class="my-5">
         <div class="container">
             <h2 class="center-title mb-4">Contact</h2>
