Add projects and articles

--- a/index.html
+++ b/index.html
@@ -165,15 +165,15 @@
                 <div class="card-body">
                     <h5 class="card-title">GSB - Application web</h5>
                     <p class="card-text">Création d'une application web pour le suivi et la gestion des remboursement de frais de déplacement</p>
-                    <a href="veilleRust.html" class="btn btn-primary">Voir le projet</a>
+                    <a href="projetWebGSB.html" class="btn btn-primary">Voir le projet</a>
                 </div>
             </div>
             <div class="card shadow-lg" style="width: 18rem;">
                 <img class="image_veille card-img-top" src="assets\images\Logo noir et bleu.png" alt="Logo d'Electric Terminal">
                 <div class="card-body">
-                    <h5 class="card-title">Stage en tant que technicien systèmes et réseaux</h5>
+                    <h5 class="card-title">Stage - Technicien systèmes et réseaux</h5>
                     <p class="card-text">Détails sur ma période de stage chez Electric Terminal en tant que technicien systèmes et réseaux</p>
-                    <a href="#" class="btn btn-primary">Voir le projet</a>
+                    <a href="stageET.html" class="btn btn-primary">Voir le projet</a>
                 </div>
             </div>
             <div class="card shadow-lg" style="width: 18rem;">
@@ -181,7 +181,7 @@
                 <div class="card-body">
                     <h5 class="card-title">GSB - Application mobile</h5>
                     <p class="card-text">Création d'une application mobile pour le suivi et la gestion des remboursement de frais de déplacement</p>
-                    <a href="veilleRust.html" class="btn btn-primary">Voir le projet</a>
+                    <a href="projetMobileGSB.html" class="btn btn-primary">Voir le projet</a>
                 </div>
             </div>
             <div class="card shadow-lg" style="width: 18rem;">
@@ -189,7 +189,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Restaurant Opale - site web</h5>
                     <p class="card-text">Création d'un site web avec système de réservation et crud pour changer les menus</p>
-                    <a href="#" class="btn btn-primary">Voir le projet</a>
+                    <a href="projetRestaurantOpale.html" class="btn btn-primary">Voir le projet</a>
                 </div>
             </div>
         </div>
@@ -209,7 +209,7 @@
         <div class="card-body">
           <h5 class="card-title">Le cloud computing et les préoccupations environnementales</h5>
           <p class="card-text">Comment le cloud computing répond-il aux défis environnementaux ? Un aperçu des initiatives et innovations visant à rendre le cloud plus durable.</p>
-          <a href="veilleRust.html" class="btn btn-primary">Voir l'article</a>
+          <a href="veilleCloud.html" class="btn btn-primary">Voir l'article</a>
         </div>
     </div>
 </div>
