--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link mx-4" href="#home">Accueil</a></li>
                     <li class="nav-item"><a class="nav-link mx-4" href="#about">À propos</a></li>
-                    <li class="nav-item"><a class="nav-link mx-4" href="#formation">Formation</a></li>
+                    <li class="nav-item"><a class="nav-link mx-4" href="#formation">Parcours</a></li>
                     <li class="nav-item"><a class="nav-link mx-4" href="#skills">Compétences</a></li>
                     <li class="nav-item"><a class="nav-link mx-4" href="#projects">Projets</a></li>
                     <li class="nav-item"><a class="nav-link mx-4" href="#contact">Contact</a></li>
@@ -28,14 +28,16 @@
         </div>
     </nav>      
         <section id="home">
-        <div class="container-fluid p-0">
-            <img src="assets\images\la-difference-entre-un-developpeur-web-integrateur-et-un-webdesigner-ifocop.jpg" class="custom-image" alt="Photo de la ville de Lyon">
-            <div class="text-center">
-                <p class="typing-effect" id="typing"></p>
-            </div>
+    <div class="container-fluid p-0">
+        <div class="image-title-container">
+            <img src="assets\images\la-difference-entre-un-developpeur-web-integrateur-et-un-webdesigner-ifocop.jpg" class="custom-image" alt="Image informatique">
+            <h1 class="text-center titre_image text-white">Bienvenue sur le site web de Collain Ginet<br> développeur web lyonnais !</h1>
         </div>
+    </div>
+</section>
         </section>
         <section id="about">
+        <h2 class="center-title mb-4">Expériences professionnelles</h2>
         <div class="container-fluid p-0 d-flex justify-content-between presentation-padding">
             <div class="card mb-3 custom-card-image">
                 <div class="row g-0">
@@ -55,7 +57,8 @@
                         <br><br>Je suis actuellement à la recherche d'un stage de 5 semaines, prévu début janvier, ou bien d'une alternance afin de renforcer mes compétences pratiques et de participer à des projets intéressants.
                     </p>
                     <div class="d-flex justify-content-around">
-                        <a href="assets\images\CGINET_Alternance _dev_web.pdf" class="btn btn-primary me-3" download target="_blank">Voir le CV</a>
+                        <a href="assets\images\CGINET_Alternance _dev_web.pdf" class="btn btn-primary me-3" target="_blank">Voir CV</a>
+                        <a href="assets\images\6-Annexe-6-1-Tableau-de-synthese-Epreuve-E4-BTS-SIO-2023_page-0001.jpg" class="btn btn-primary me-3" target="_blank">Voir tableau de synthèse des compétences</a>
                         <a href="#contact" class="btn btn-outline-secondary">Contact</a>
                     </div>
                 </div>
@@ -64,6 +67,17 @@
       </section>
       <section id="formation">
         <div class="container my-5 d-flex flex-column gap-5">
+            <h2 class="center-title mb-4">Expériences professionnelles</h2>
+            <div class="formation-bg p-4 shadow-lg">
+                <h4>Technicien systèmes et réseaux (stage)</h4>
+                <div class="d-flex justify-content-between"><h5>Electric Terminal</h5>
+                    <p class="fw-bold">Juin - Juillet 2024</p>
+                </div>
+                <p>Installation et configuration de serveurs</p>
+                <p>Gestion des comptes utilisateurs et des droits d’accès</p>
+                <p>Réalisation de sauvegardes</p>
+                <p class="fst-italic"><br>Sainte-Foy-lès-Lyon</p>
+            </div>
             <h2 class="center-title mb-4">Formations</h2>
             <div class="formation-bg p-4 shadow-lg">
                 <h4>BTS SIO</h4>
@@ -71,13 +85,6 @@
                     <p class="fw-bold">2023-2025</p>
                 </div>
                 <p class="fst-italic"><br>Campus Science-U Lyon</p>
-            </div>
-            <div class="formation-bg p-4 shadow-lg">
-                <h4>Technicien systèmes et réseaux (stage)</h4>
-                <div class="d-flex justify-content-between"><h5>Electric Terminal</h5>
-                    <p class="fw-bold">Juin - Juillet 2024</p>
-                </div>
-                <p class="fst-italic"><br>Sainte-Foy-lès-Lyon</p>
             </div>
             <div class="formation-bg p-4 shadow-lg">
                 <h4>Master 1 Langue et Gestion LEA</h4>
