--- a/projetWebGSB.html
+++ b/projetWebGSB.html
@@ -18,19 +18,18 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link mx-4" href="#home">Accueil</a></li>
-                        <li class="nav-item"><a class="nav-link mx-4" href="#about">À propos</a></li>
-                        <li class="nav-item"><a class="nav-link mx-4" href="#formation">Formation</a></li>
-                        <li class="nav-item"><a class="nav-link mx-4" href="#skills">Compétences</a></li>
-                        <li class="nav-item"><a class="nav-link mx-4" href="#projects">Projets</a></li>
-                        <li class="nav-item"><a class="nav-link mx-4" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link mx-4" href="index.html#home">Accueil</a></li>
+                        <li class="nav-item"><a class="nav-link mx-4" href="index.html#about">À propos</a></li>
+                        <li class="nav-item"><a class="nav-link mx-4" href="index.html#formation">Formation</a></li>
+                        <li class="nav-item"><a class="nav-link mx-4" href="index.html#skills">Compétences</a></li>
+                        <li class="nav-item"><a class="nav-link mx-4" href="index.html#projects">Projets</a></li>
+                        <li class="nav-item"><a class="nav-link mx-4" href="index.html#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>   
-
-        <h1 class="text-center mb-4 not_index">Projet d'application web : application de gestion de fiches frais</h1>
-        <section class="container my-5">
+        <section class="container my-5 bg-white padding-articles">
+            <h1 class="text-center mb-4 not_index">Projet d'application web : application de gestion de fiches frais</h1>
             <article class="mx-5">
                 <h2>Contexte du projet</h2>
                 <p>Le laboratoire Galaxy Swiss Bourdin (GSB) est issu de la fusion entre le géant américain Galaxy 
